[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/Beacon/Beacon.gd" type="Script" id=1]
[ext_resource path="res://assets/beacons/cicrle_empty.png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 31.504

[node name="Beacon" type="Area2D" groups=["Beacons"]]
collision_layer = 4
collision_mask = 4
priority = 3.0
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.5, -0.5 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="TextureButton" type="TextureButton" parent="."]
visible = false
margin_left = -32.0
margin_top = -33.0
margin_right = 32.0
margin_bottom = 31.0
texture_normal = ExtResource( 2 )

[connection signal="body_entered" from="." to="." method="_on_Beacon_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Beacon_body_exited"]
[connection signal="input_event" from="." to="." method="_on_Beacon_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_Beacon_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Beacon_mouse_exited"]
